# sqla_model_context

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  dev-requirements.in  dev-requirements.txt  mypy.ini  requirements.txt  setup.cfg  tasks.py  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/manager/: manager.py
examples/owner/: owner.py
src/sqla_model_context/: __init__.py  context.py
tests/: test_declarative_example.py  test_sqla_model_context.py
