[metadata]
name = sqla_model_context
version = 0.1.0
description = Context manager for default relationship values in SQLAlchemy
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/alexrudy/sqla_model_context
author = Alex Rudy
author_email = opensource@alexrudy.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir=
    =src
packages = find:
install_requires =
    sqlalchemy
    werkzeug
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where=src

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version={current_version}
replace = version={new_version}


[bumpversion:file:src/sqla_model_context/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
ignore = E203,W503


[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts =
    --color=yes
    --cov=sqla_model_context
    --cov-report=
log_level = NOTSET

[coverage:run]
concurrency = multiprocessing
source = src/
parallel = True

[coverage:report]
exclude_lines =
    pragma: nocover
    raise AssertionError
    raise NotImplementedError
    if 0:
    if TYPE_CHECKING:
    if __name__ == .__main__.:
    except BaseException:
